# atm0s-media-sip-gateway

./: Cargo.toml
src/: call_manager.rs  futures.rs  lib.rs  main.rs  protocol.rs
src/address_book/: storage.rs
src/call_manager/: incoming_call.rs  outgoing_call.rs
src/hook/: queue.rs  sender.rs
src/http/: api_call.rs  header_xapi_key.rs  mod.rs  response_result.rs  ws_call.rs
src/protocol/: http.rs  incoming.rs  outgoing.rs
src/sip/: mod.rs  rtp.rs  server.rs
src/sip/media/: api.rs  rtp_answer.rs
src/sip/server/: incoming.rs  outgoing.rs
src/sip/server/incoming/: talking_state.rs  wait_state.rs
src/sip/server/outgoing/: calling_state.rs  early_state.rs  talking_state.rs
