[package]
name = "rust-sip-wp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
ezk-sdp-types = "0.3.0"
ezk-sip-core = "0.3.0"
ezk-sip-ua = "0.4.2"
log = "0.4.22"
poem = { version = "3.1.0", features = ["websocket"] }
poem-openapi = { version = "5.1.1", features = ["swagger-ui"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
